fix(drawer): add overflow-y:auto for drawer
affects: @entur/modal

adds scrollbar if content is to high for viewport

--- a/packages/modal/src/Drawer.scss
+++ b/packages/modal/src/Drawer.scss
@@ -23,6 +23,7 @@
   min-width: 20rem;
   width: 25vw;
   z-index: $z-indexes-modal;
+  overflow-y: auto;
 
   .eds-contrast & {
     background: $colors-blues-blue10;
